--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
 
-			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2026/inne-ute-feb',isMobile)</script></div>
+			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2026/cos-gästkrönika',isMobile)</script></div>
 
 			<div style = "background: black; width: 100%;">
 			</div>
@@ -381,8 +381,9 @@
 			</div>
 			
 			<h2 style = "width: 100%;">CELIBAT & STADEN</h2>
-			<div id = 'cos'><script>draw_article_button('cos','2026/cos-kinsugi-diskotek',isMobile)</script></div>
+			<div id = 'cos'><script>draw_article_button('cos','2026/cos-gästkrönika',isMobile)</script></div>
 			<div style = "display: grid; margin-top: 10px;">
+			<a class = 'artikel_knapp' href='/artikel?=2025/cos-kinsugi-diskotek'>C&S: Kintsugi diskotek</a>	
 			<a class = 'artikel_knapp' href='/artikel?=2025/cos-näktergal-på-lokal'>C&S: Näktergal på lokal</a>	
 			</div>
 			
