Remove duplicate draw_article_button for main97

--- a/index.html
+++ b/index.html
@@ -367,9 +367,9 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main100'><script>draw_article_button('main99','2026/rekognoscerat',isMobile)</script></div>
 			<div id = 'main99'><script>draw_article_button('main99','2026/int-drottning-zilvia',isMobile)</script></div>
-			<div id = 'main98'><script>draw_article_button('main98','2026/originalspråk',isMobile)</script></div>
-			<div id = 'main97'><script>draw_article_button('main97','2026/vietnam',isMobile)</script></div>
+			<div id = 'main98'><script>draw_article_button('main98','2026/originalspråk',isMobile)</script></div>		
 
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','2026/inne-ute-feb',isMobile)</script></div>
@@ -406,6 +406,7 @@
 			new_html += "</a>"
 			document.getElementById("reklam_banner").innerHTML = new_html;
 			</script>
+			<div id = 'main97'><script>draw_article_button('main97','2026/vietnam',isMobile)</script></div>
 			<div id = 'main96'><script>draw_article_button('main96','2025/att-publicera',isMobile)</script></div>	
 			<div id = 'main95'><script>draw_article_button('main95','2025/uppesittarkväll-på-göteborgs-central',isMobile)</script></div>
 			<div id = 'main94'><script>draw_article_button('main94','2025/work-wear-fiction',isMobile)</script></div>	
