--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
 
-			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2026/cos-gästkrönika',isMobile)</script></div>
+			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2026/rekognoscerat',isMobile)</script></div>
 
 			<div style = "background: black; width: 100%;">
 			</div>
