--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
 
-			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2026/rekognoscerat',isMobile)</script></div>
+			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2026/inne-ute-mar',isMobile)</script></div>
 
 			<div style = "background: black; width: 100%;">
 			</div>
@@ -370,12 +370,11 @@
 			<div id = 'main98'><script>draw_article_button('main98','2026/originalspråk',isMobile)</script></div>		
 
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
-			<div id = 'iul'><script>draw_article_button('iul','2026/inne-ute-feb',isMobile)</script></div>
+			<div id = 'iul'><script>draw_article_button('iul','2026/inne-ute-mar',isMobile)</script></div>
 			<div style = "display: grid;">
-				<a class = 'artikel_knapp' href='/artikel?=2025/inne-ute-dec'>SEPTEMBER</a>		
-				<a class = 'artikel_knapp' href='/artikel?=2025/inne-ute-nov'>NOVEMBER</a>		
-				<a class = 'artikel_knapp' href='/artikel?=2025/inne-ute-okt'>OKTOBER</a>	
-																						
+				<a class = 'artikel_knapp' href='/artikel?=2026/inne-ute-feb'>FEBRUARI</a>	
+				<a class = 'artikel_knapp' href='/artikel?=2025/inne-ute-dec'>DECEMBER</a>		
+				<a class = 'artikel_knapp' href='/artikel?=2025/inne-ute-nov'>NOVEMBER</a>																				
 			</div>
 			
 			<h2 style = "width: 100%;">CELIBAT & STADEN</h2>
